@@ -1,3 +1,8 @@
+2008-10-10  Richard Hult  <richard@imendio.com>
+
+	* src/eggfindbar.c: Sync from evince to get rid of deprecated
+	APIs. Reapply the removal of property translations.
+
 2008-10-09  Richard Hult  <richard@imendio.com>
 
 	* src/dh-search.h: Remove show_advanced function here too, it was
